# halfedge

./: .gitignore  Cargo.toml  bacon.toml  flake.nix
examples/assets/: .gitignore
src/: lib.rs  main.rs  plot.rs
src/mesh/: display.rs  flip.rs  mod.rs  plane.rs  plot.rs  point.rs  primative.rs  split.rs  traverse.rs  tri.rs
